# scrapper-main

Scrapper-main/: .env.example  PLAN.md  PRD.md  README.md  auto-commit.yml  docker-compose.yml  pyproject.toml
Scrapper-main/backend/: Dockerfile  pyproject.toml
Scrapper-main/backend/alembic/: env.py
Scrapper-main/backend/alembic/versions/: 001_initial_schema.py
Scrapper-main/backend/app/: __init__.py  config.py  main.py
Scrapper-main/backend/app/api/: deps.py
Scrapper-main/backend/app/api/v1/: bulk.py  capture.py  companies.py  contacts.py  domain_search.py  domains.py  export.py  jobs.py  lists.py  people.py  resolve.py  router.py  schemas.py  verify.py
Scrapper-main/backend/app/core/: __init__.py  contact_intel.py  export.py  schemas.py
Scrapper-main/backend/app/core/enrichers/: __init__.py  apollo.py  hunter.py
Scrapper-main/backend/app/core/patterns/: __init__.py  generator.py  learner.py  scorer.py
Scrapper-main/backend/app/core/ranking/: __init__.py  (+1 more)
Scrapper-main/backend/app/db/: engine.py  legacy_sqlite.py  models.py  queries.py  repository.py
Scrapper-main/backend/app/tasks/: __init__.py  bulk_find_verify.py  bulk_verify.py  recheck.py
Scrapper-main/backend/scripts/: migrate_sqlite.py
Scrapper-main/backend/tests/: test_pattern_generator.py
Scrapper-main/docs/: BACKEND.md
Scrapper-main/frontend/: Dockerfile  next.config.js  package.json
Scrapper-main/frontend/src/app/: layout.tsx
Scrapper-main/frontend/src/components/: NavLinks.tsx
Scrapper-main/frontend/src/lib/: api.ts  types.ts
Scrapper-main/src/sdr_cli/: __init__.py  cli.py  config.py  db.py  export.py  models.py
Scrapper-main/src/sdr_cli/enrichers/: apollo.py  hunter.py
Scrapper-main/src/sdr_cli/scrapers/: __init__.py  producthunt.py  team_page.py  yc.py
Scrapper-main/tests/: conftest.py  test_db.py  test_models.py  test_yc.py
(+22 files in other folders)
